# quickfix

./: .gitignore  README.md  configure.ac
examples/: CMakeLists.txt  Makefile.am
examples/client/: .clang-format  1_TestRequest.cpp  8_ExecutionReport.cpp  AF_OrderMassStatusRequest.cpp  Application.cpp  Application.h  CMakeLists.txt  D_NewOrderSingle.cpp  FIX44-CSERVER.xml.org  Makefile.am  Market.h  Trade.h  V_MarketDataRequest.cpp  W_MarketDataIncrementalRefresh.cpp  client.config  client.cpp  tradeclient  x_SecurityListRequest.cpp  y_SecurityList.cpp
src/C++/: FixFieldNumbers.h  FixFields.h
src/C++/fix44/: NewOrderSingle.h
